# services/api/src/main/java/br/com/nutritionplatform/clinical/ConsultationNotFoundException.java
@@ -1,0 +1,4 @@
+package br.com.nutritionplatform.clinical;
+
+public class ConsultationNotFoundException extends RuntimeException {
+}
